fix(console): revert the custom jwt forms overflow hidden
revert the custom jwt forms overflow hidden styles

--- a/packages/console/src/pages/JwtClaims/index.module.scss
+++ b/packages/console/src/pages/JwtClaims/index.module.scss
@@ -19,15 +19,10 @@
   display: flex;
   flex-direction: row;
   flex-grow: 1;
-  // restrict the height of the tab content to the height of the container
-  overflow: hidden;
 
   > * {
     flex: 1;
     margin-bottom: _.unit(6);
-
-    // restrict the height of the tab content to the height of the container
-    overflow: hidden;
 
     &:first-child {
       margin-right: _.unit(3);
